# render-run

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
docs/: manifest-schema.md
praxis/: 01-capture.md  02-sense.md  03-explore.md  04-shape.md  05-formalize.md  06-commit.md  07-execute.md  08-sustain.md  09-close.md  README.md  praxis.yaml
src/render_run/: __main__.py  cli.py
src/render_run/application/: batch_plan_service.py  generation_service.py  prompt_expander_service.py  run_directory_service.py  user_config_service.py
src/render_run/domain/: image_generation_provider.py
src/render_run/infrastructure/: gcloud_cli_image_generation_provider.py
tests/: conftest.py  test_cli.py
