[tool.poetry]
name = "render-run"
version = "0.1.0"
description = "Agent-driven batch image generation runner"
authors = ["jayers99"]
readme = "README.md"
packages = [{ include = "render_run", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
typer = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.8"
mypy = "^1.0"
pre-commit = "^4.5.1"

[tool.poetry.scripts]
render-run = "render_run.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/"]
